Huge refactoring of REST model
OpenUI5 REST model now supports basic CRUD with a mORMot REST server.
Still work in progress.

--- a/.gitignore
+++ b/.gitignore
@@ -63,13 +63,14 @@ Temporary Items
 *.classpath
 
 *.log
-
-*.db3
-
 backup/
 lib/
 lib*/
-mORMot-master/
+bin/
+exe/
+mORMot-master/*
+!mORMot-master/place_your_mormot_source_here.txt
 .settings/
 build/
 src/
+log/
