Added add team dialog

--- a/.gitignore
+++ b/.gitignore
@@ -66,9 +66,7 @@ Temporary Items
 backup/
 lib/
 lib*/
-bin/
-exe/
-mORMot-master/*
+mORMot-master/
 !mORMot-master/place_your_mormot_source_here.txt
 .settings/
 build/
