Small view updates.

--- a/.gitignore
+++ b/.gitignore
@@ -69,8 +69,11 @@ Temporary Items
 *.classpath
 
 *.log
+*.db3
 backup/
 lib/
+bin/
+exe/
 lib*/
 mORMot-master/
 !mORMot-master/place_your_mormot_source_here.txt
