Major update of mORmot RestModel
Model now works better with the mORMot , thanks to metadata.
Less hacks needed.
One hack added: upload of blobs: the standard OData makes a string from
the binary data ... ;-(

--- a/SAPUI5Server.lpi
+++ b/SAPUI5Server.lpi
@@ -32,7 +32,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="5">
       <Unit0>
         <Filename Value="SAPUI5Server.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -48,6 +48,14 @@
         <Filename Value="SampleData.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="dataserver.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit3>
+      <Unit4>
+        <Filename Value="DataServerV4.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
